fix: update pattern lab to fix header / layout issue in IE 11

--- a/packages/uikit-workshop/src/scripts/components/pl-header/pl-header.scss
+++ b/packages/uikit-workshop/src/scripts/components/pl-header/pl-header.scss
@@ -3,7 +3,7 @@
 \*------------------------------------*/
 
 pl-header {
-  position: fixed;
+  position: relative;
   position: sticky;
   top: 0;
   left: 0;
@@ -31,6 +31,8 @@ pl-header {
 
   @media all and (min-width: $pl-bp-med) {
     .pl-c-body--theme-sidebar & {
+      position: fixed;
+      position: sticky;
     /**
       * Header
       * 1) Set width to sidebar width defined above
